--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mr-auto" href="#"><a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a></a>
+            <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -123,23 +123,23 @@
                                         <label class="form-check-label" for="guest1">1</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="guest" id="guest2" value="1">
+                                        <input class="form-check-input" type="radio" name="guest" id="guest2" value="2">
                                         <label class="form-check-label" for="guest2">2</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="guest" id="guest3" value="1">
+                                        <input class="form-check-input" type="radio" name="guest" id="guest3" value="3">
                                         <label class="form-check-label" for="guest3">3</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="guest" id="guest4" value="1">
+                                        <input class="form-check-input" type="radio" name="guest" id="guest4" value="4">
                                         <label class="form-check-label" for="guest4">4</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="guest" id="guest5" value="1">
+                                        <input class="form-check-input" type="radio" name="guest" id="guest5" value="5">
                                         <label class="form-check-label" for="guest5">5</label>
                                     </div>
                                       <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="guest" id="guest6" value="2">
+                                        <input class="form-check-input" type="radio" name="guest" id="guest6" value="6">
                                         <label class="form-check-label" for="guest6">6</label>
                                     </div>
                                 </div>
