--- a/aboutus.html
+++ b/aboutus.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link href="css/styles.css" rel="stylesheet">
     <!-- endbuild -->
-    <title>Ristorante Con Fusion: About Us</title>
+    <title>BMW: About Us</title>
 
 </head>
 
@@ -24,12 +24,11 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mr-auto" href="index.html"><a class="navbar-brand mr-auto" href="index.html"><img src="img/logo.png" height="30" width="41"></a></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
                     <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span> About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="explore.html"><span class="fa fa-list fa-lg"></span> Explore</a></li>
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
             </div>
@@ -39,12 +38,9 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-6">
-                    <h1>Ristorante con Fusion</h1>
-                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-                </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo.png" class="img-fluid">
+                <div class="col-12">
+                    <h1>BMW</h1>
+                    <p>The success of the BMW Group has always been based on long-term thinking and responsible action. The company has therefore established ecological and social sustainability throughout the value chain, comprehensive product responsibility and a clear commitment to conserving resources as an integral part of its strategy.</p>
                 </div>
             </div>
         </div>
@@ -65,8 +61,8 @@
         <div class="row row-content">
             <div class="col-12 col-sm-6">
                 <h2>Our History</h2>
-                <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
-                <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
+                <p>The acronym BMW stands for Bayerische Motoren Werke GmbH, which roughly translates to the Bavarian Engine Works Company. The name harks back to the company’s origin in the German state of Bavaria. It also indicates BMW's original product range: engines for various applications.<br>Today's BMW AG has its origin in Rapp-Motorenwerke GmbH, which began producing aircraft engines in 1913. During the First World War, Rapp supplied the air force of the German Empire. At that time, automobiles had not yet broken through into the mainstream.</p>
+                <p>BMW was created in 1917 from the Munich firm Rapp-Motorenwerke. The company was incorporated into Knorr-Bremse AG in 1920 before being refounded as BMW AG in 1922. It was the successor of Bayerische Flugzeugwerke AG, founded in 1916. 1916 is therefore considered BMW’s founding year.</p>
             </div>
             <div class="col-12 col-sm-6">
                 <div class="card">
@@ -88,12 +84,8 @@
             <div class="col-12">
                 <div class="card card-body bg-light">
                     <blockquote class="blockquote">
-                        <p class="mb-0">You better cut the pizza in four pieces because
-                            I'm not hungry enough to eat six.</p>
-                        <footer class="blockquote-footer">Yogi Berra,
-                            <cite title="Source Title">The Wit and Wisdom of Yogi Berra,
-                            P. Pepe, Diversion Books, 2014</cite>
-                        </footer>
+                        <h4>Fun Fact</h4>
+                        <p class="mb-0">The nickname “Beamer” comes from Great Britain – and originally served to distinguish it from a British manufacturer* whose motorcycles bore the nickname “Beezer”. But BMW motorcycles also achieved great success on the British racing scene, including the “Isle of Man TT Races”.</p>
                     </blockquote>
                 </div>
             </div>
