--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
+            <!--a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a-->
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="explore.html"><span class="fa fa-list fa-lg"></span> Explore</a></li>
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <div id="loginModal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" role="content">
+        <div class="modal-dialog modal-md" role="content">
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
@@ -47,29 +47,30 @@
                     <button type="button" class="close dismiss">&times;</button>
                 </div>
                 <div class="modal-body">
-                    <form>
-                        <div class="form-row">
-                            <div class="form-group col-sm-4">
-                                    <label class="sr-only" for="exampleInputEmail3">Email address</label>
-                                    <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
-                            </div>
-                            <div class="form-group col-sm-4">
-                                <label class="sr-only" for="exampleInputPassword3">Password</label>
-                                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
-                            </div>
-                            <div class="col-sm-auto">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox">
-                                    <label class="form-check-label"> Remember me
-                                    </label>
+                    <div class="">
+                        <form>
+                            <div class="form-row">
+                                <div class="form-group col-sm-12">
+                                        <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                        <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+                                </div>
+                                <div class="form-group col-sm-12">
+                                    <label class="sr-only" for="exampleInputPassword3">Password</label>
+                                    <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                                </div>
+                                <div class="col-sm-12 justify-content-center align-self-center">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox">
+                                        <label class="form-check-label"> Remember me </label>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="form-row">
-                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
-                        </div>
-                    </form>
+                            <div class="form-row col-sm-12 justify-content-center ">
+                                <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -79,14 +80,14 @@
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Reserve a Table </h4>
+                    <h4 class="modal-title">Book a Test Drive</h4>
                     <button type="button" class="close dismiss">&times;</button>
                 </div>
                 <div class="modal-body">
                     <form>
                         <div class="form-group row">
-                            <label for="approve" class="col-12 col-md-2 col-form-label">Number of Guests</label>
-                            <div class="col-12 col-md-10">
+                            <label for="approve" class="col-12 col-md-3 col-form-label">Number of Guests</label>
+                            <div class="col-12 col-md-9">
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="radio" name="guest" id="guest1" value="1">
                                     <label class="form-check-label" for="guest1">1</label>
@@ -114,18 +115,13 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="date" class="col 12 col-md-2 col-form-label">Section</label>
-                            <div class="btn-group btn-group-toggle col-12 col-md-auto" data-toggle="buttons">
-                                <label class="btn btn-success active">
-                                  <input type="radio" name="non-smoking" id="non-smoking" autocomplete="on" checked> Non-smoking
-                                </label>
-                                <label class="btn btn-danger">
-                                  <input type="radio" name="smoking" id="smoking" autocomplete="off"> Smoking
-                                </label>
+                            <label for="model" class="col 12 col-md-3 col-form-label">Model ID</label>
+                            <div class=" col-12 col-md-8">
+                              <input type="text" class="form-control" id="model" name="model" placeholder="Enter the Model ID of the desired car to book a test drive">
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="date" class="col 12 col-md-2 col-form-label">Date and time</label>
+                            <label for="date" class="col 12 col-md-3 col-form-label">Date and time</label>
                             <div class=" col-12 col-md-4">
                               <input type="text" class="form-control" id="date" name="date" placeholder="Date" onfocus="(this.type='date')">
                             </div>
@@ -133,12 +129,13 @@
                               <input type="text" class="form-control" id="time" name="time" placeholder="Time" onfocus="(this.type='time')">
                             </div>
                         </div>
-                        <div class="form-group row offset-md-2 col-md-auto">
-                            <div class="mr-1">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <div class="form-group row col-md-auto">
+                            <div class="col-md-3"> </div>
+                            <div class="col-md-auto">
+                                <button type="button" class="btn btn-secondary mr-1" data-dismiss="modal">Cancel</button>
                             </div>
                             <div>
-                                <button type="submit" class="btn btn-primary">Reserve</button>
+                                <button type="submit" class="btn btn-primary">Book</button>
                             </div>
                         </div>
                     </form>
@@ -149,15 +146,16 @@
     <header class = "jumbotron">
         <div class = "container">
             <div class = "row row-header">
-                <div class="col-12 col-sm-6">
-                    <h1>Ristorante con Fusion</h1>
-                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-                </div>
                 <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+                <div class="col-12 col-sm-6">
+                    <h1>BMW</h1>
+                    <p>BMW stands for pure passion for luxury and motorsport – this is what the BMW cars embodies and nothing else. The aspiration: maximum performance in perfection and applied to every detail. For breathtaking driving dynamics that release adrenalin at every moment.</p>
+                    <p>The BMW Group sets trends in production technology and sustainability as an innovation leader with an intelligent material mix, a technological shift towards digitalisation and resource-efficient production. At the same time, flexibility and continuous optimisation of value chains ensure competitiveness.</p>
+                </div>
                 <a class="col-12 col-sm-3 align-self-center" id="rb">
-                    <button type="submit" class="btn btn-lg btn-block btn-warning">Reserve Table</button>
+                    <button type="submit" class="btn btn-lg btn-block btn-warning">Book a Test Drive</button>
                 </a>
             </div>
         </div>
@@ -169,28 +167,25 @@
                 <div id="mycarousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-                            <img class="d-block img-fluid"
-                                src="img/uthappizza.png" alt="Uttappizza">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>Uttappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default badge-secondary">$4.99</span></h2>
-                                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine
-                                cherry tomatoes, Vidalia onion, Guntur chillies and
-                                Buffalo Paneer.</p>
+                            <img src="img/c1.png" alt="car">
+                            <div class="carousel-caption ">
+                                <h2>Explore a Range of Luxury &nbsp<span class="badge badge-danger">NEW</span></h2>
+                                <p class="d-none d-sm-block">A statement of the luxury class: the first-ever BMW X7 is the elegant fusion of presence and personality. Despite its majestic appearance, it gives an impression of lightness and agility thanks to the puristic design and athletic styling</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="img\buffet.png" alt="Buffet">
+                            <img class="d-block img-fluid" src="img\c2.png" alt="car">
                             <div class="carousel-caption d-none d-md-block align-items-center flex-column" >
-                                <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
-                                <p class = "d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                                <h2>Best in Class Services</h2>
+                                <p class = "d-none d-sm-block">With BMW Service Inclusive, you can enjoy driving pleasure to the full extent. Now and for a period of your choice, you don’t have to waste a moment thinking about the cost of maintenance, inspection or wear & tear. With BMW Service Inclusive, this work is covered for both new and used vehicles</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="img/alberto.png" alt="Alberto Somayya">
+                            <img class="d-block img-fluid" src="img/c3.png" alt="car">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2>Alberto Somayya</h2>
-                                <h4>Executive Chef</h4>
-                                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences.</p>
+                                <h2>Style at its Best
+                                <span class="badge badge-pill badge-default badge-secondary"> BMW Exclusive</span></h2>
+                                <p class="d-none d-sm-block">Featuring new exquisite design details, the finest materials and powerful innovations, the BMW i Series Saloon, delivers a new echelon of driving pleasure. Imagined, designed and crafted for individuals who value every moment, discover an experience inspired by those who drive the world.</p>
                             </div>
                         </div>
                     </div>
@@ -212,6 +207,25 @@
             </div>
         </div>
 
+        <div class = "container">
+            <div class = "row ">
+                <div class="col-12">
+                    <img src="img/banner1.png" class="img-fluid">
+                    <br> <br> <br>
+                </div>
+            </div>
+            <div class = "row ">
+                <div class="col-12">
+                    <img src="img/banner2.png" class="img-fluid">
+                    <br> <br> <br>
+                </div>
+            </div>
+            <div class = "row ">
+                <div class="col-12">
+                </div>
+            </div>
+        </div>
+
     <footer class = "footer">
         <div class = "container">
             <div class = "row">             
@@ -220,19 +234,19 @@
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
                         <li><a href="aboutus.html">About</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="explore.html">Explore</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
-		              121, Clear Water Bay Road<br>
-		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
-		              <i class="fa fa-phone fa-lg"></i> Tel.: +852 1234 5678<br>
-		              <i class="fa fa-fax fa-lg"></i>Fax: +852 8765 4321<br>
-		              <i class="fa fa-envelope fa-lg"></i>Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+		              123, BMW Deutche Motoren<br>
+		              Mathura Road, New Delhi<br>
+		              Delhi, India<br>
+		              <i class="fa fa-phone fa-lg"></i> Tel.: +123 1234 5678<br>
+		              <i class="fa fa-fax fa-lg"></i>Fax: +987 8765 4321<br>
+		              <i class="fa fa-envelope fa-lg"></i>Email: <a href="mailto:bmw@motors.net">bmw@motors.net</a>
 		           </address>
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
@@ -248,7 +262,8 @@
            </div>
            <div class="row justify-content-center">             
                 <div class="col-auto">
-                    <p>© Copyright 2018 Ristorante Con Fusion</p>
+                    <br>
+                    <p>© Copyright 2022 BMW India</p>
                 </div>
             </div>
         </div>
