Final design completed

--- a/index.html
+++ b/index.html
@@ -263,7 +263,12 @@
            <div class="row justify-content-center">             
                 <div class="col-auto">
                     <br>
-                    <p>© Copyright 2022 BMW India</p>
+                    <p>© Copyright BMW</p>
+                </div>
+            </div>
+           <div class="row justify-content-center">             
+                <div class="col-8">
+                    The text, images, graphics, sound files, animation files, video files, and their arrangement on this website solely belongs to BMW and have been used only for practice purposes not for commercial use or distribution.
                 </div>
             </div>
         </div>
