--- a/aboutus.html
+++ b/aboutus.html
@@ -102,41 +102,43 @@
                 <div class="card">
                     <div class="card-header" role="tab" id="peterhead">
                         <h3 class="mb-0">
-                            Peter Pan <small>Chief Epicurious Officer</small>
+                            Viraj Patidar <small>President and Chairman</small>
                         </h3>
                     </div>
                     <div class="card-body">
-                        <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
+                        <p class="d-none d-sm-block"><em>This project/website was just built for practice purposes.</em> <br>
+                            © Copyright BMW. All rights reserved. The text, images, graphics, sound files, animation files, video files, and their arrangement on this website solely belongs to BMW and have been used only for practice purposes not for commercial use or distribution.
+                        </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header" role="tab" id="dannyhead">
                         <h3 class="mb-0">
-                            Dhanasekaran Witherspoon <small>Chief Food Officer</small>
+                            Tony Stark <small>CEO</small>
                         </h3>
                     </div>                            
                     <div class="card-body">
-                        <p class="d-none d-sm-block">Our CFO, Danny, as he is affectionately referred to by his colleagues, comes from  a long established family tradition in farming and produce. His experiences growing up on a farm in the  Australian outback gave him great appreciation for varieties of food sources. As he puts it in his own words,    <em>Everything that runs, wins, and everything that stays, pays!</em></p>
+                        <p class="d-none d-sm-block">For the BMW Group, corporate governance is an all-embracing topic which involves all areas of the company. Transparent reporting and a corporate governance policy aimed at the interests of stakeholders are well-established traditions within the BMW Group. Cooperation between the Board of Management and the Supervisory Board, in an atmosphere of commonly shared trust and responsibility has long been the basis for managing the BMW Group. </p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-header" role="tab" id="agumbehead">
+                    <div class="card-header" role="tab">
                         <h3 class="mb-0">
-                            Agumbe Tang <small>Chief Taste Officer</small>
+                            Peter Pan <small>India Head</small>
                         </h3>
                     </div>
                     <div class="card-body">
-                        <p class="d-none d-sm-block">Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto, <em>You click only if you survive my lick.</em></p>
+                        <p class="d-none d-sm-block">For the BMW Group, corporate governance is an all-embracing topic which involves all areas of the company. Transparent reporting and a corporate governance policy aimed at the interests of stakeholders are well-established traditions within the BMW Group. Cooperation between the Board of Management and the Supervisory Board, in an atmosphere of commonly shared trust and responsibility has long been the basis for managing the BMW Group. </p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-header" role="tab" id="albertohead">
+                    <div class="card-header" role="tab">
                         <h3 class="mb-0">
-                            Alberto Somayya <small>Executive Chef</small>
+                            Abcd Pqrst <small>Board Member</small>
                         </h3>
                     </div>
                     <div class="card-body">
-                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
+                        <p class="d-none d-sm-block">For the BMW Group, corporate governance is an all-embracing topic which involves all areas of the company. Transparent reporting and a corporate governance policy aimed at the interests of stakeholders are well-established traditions within the BMW Group. Cooperation between the Board of Management and the Supervisory Board, in an atmosphere of commonly shared trust and responsibility has long been the basis for managing the BMW Group. </p>
                     </div>
                 </div>
             </div>
@@ -150,35 +152,35 @@
                         <thead class="thead-dark">
                             <tr>
                                 <th>&nbsp;</th>
-                                <th>2013</th>
-                                <th>2014</th>
-                                <th>2015</th>
+                                <th>2017</th>
+                                <th>2018</th>
+                                <th>2019</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <th>Employees</th>
-                                <td>15</td>
-                                <td>30</td>
-                                <td>40</td>
+                                <td>70,000</td>
+                                <td>100,000</td>
+                                <td>126,016</td>
                             </tr>
                             <tr>
-                                <th>Guests Served</th>
-                                <td>15000</td>
-                                <td>45000</td>
-                                <td>100,000</td>
+                                <th>Vehicles Sold</th>
+                                <td>1.7 million</td>
+                                <td>2.0 million</td>
+                                <td>2.5 million</td>
                             </tr>
                             <tr>
                                 <th>Special Events</th>
-                                <td>3</td>
-                                <td>20</td>
-                                <td>45</td>
+                                <td>35</td>
+                                <td>55</td>
+                                <td>75</td>
                             </tr>
                             <tr>
                                 <th>Annual Turnover</th>
-                                <td>$251,325</td>
-                                <td>$1,250,375</td>
-                                <td>~$3,000,000</td>
+                                <td>€ 70.210 billion</td>
+                                <td>€ 84.210 billion</td>
+                                <td>€ 104.210 billion</td>
                             </tr>
                         </tbody>
                     </table>
@@ -226,7 +228,7 @@
            <div class="row justify-content-center">             
                 <div class="col-auto">
                     <br>
-                    <p>© Copyright 2022 BMW India</p>
+                    <p>© Copyright BMW</p>
                 </div>
             </div>
         </div>
