--- a/contactus.html
+++ b/contactus.html
@@ -89,7 +89,7 @@
             <div class="col-12 col-sm-6">
                 <br>
                 <h5>Map of Our Location</h5> <br>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3505.7342597986117!2d77.2929186145569!3d28.51764189602344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce6b7b4b53e31%3A0xf7c5b5cfa545e4ca!2sBMW%20Deutsche%20Motoren%20%7C%20Mathura%20Road!5e0!3m2!1sen!2sin!4v1616044324540!5m2!1sen!2sin" width="600" height="480" style="border:0;" allowfullscreen="false" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3505.7342597986117!2d77.2929186145569!3d28.51764189602344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce6b7b4b53e31%3A0xf7c5b5cfa545e4ca!2sBMW%20Deutsche%20Motoren%20%7C%20Mathura%20Road!5e0!3m2!1sen!2sin!4v1616044324540!5m2!1sen!2sin" width="600" height="480" style="border:2;" allowfullscreen="false" loading="lazy"></iframe>
             </div>
         </div>
 
@@ -198,7 +198,7 @@
            <div class="row justify-content-center">             
                 <div class="col-auto">
                     <br>
-                    <p>© Copyright 2022 BMW India</p>
+                    <p>© Copyright BMW</p>
                 </div>
             </div>
         </div>
